--- a/PhoneGap.css
+++ b/PhoneGap.css
@@ -1,8 +1,13 @@
+body {
+  font-family: arial, sans-serif;
+}
+
 h2{
   color:#27a1c5;
   background-color: #2d3033;
   border-radius: 10px;
   padding-left: 10px;
+  margin-top: 0;
   clear:both;
 }
 
@@ -13,7 +18,7 @@ header{
   font-family:courier;
 }
 
-section{
+section, footer {
   width:75%;
   margin: 0 auto;
   text-align:justify;
@@ -40,19 +45,19 @@ section{
 
 }
 
-a{
+a {
   text-decoration: none;
   color:#27a1c5;
   font-style: italic;
 
 }
 
-a:hover{
+a:hover {
   color:#2d3033;
 
 }
 
-.code{
+.code {
   font-style: italic;
   background-color: black;
   width: 180px;
@@ -60,12 +65,35 @@ a:hover{
 
 }
 
-ul{
+ul {
   list-style-type: none;
 
 }
 
-iframe{
+iframe {
     display:block;
     margin: 0 auto;
+}
+
+/* ANIMATIONS */
+article, footer {
+  height: 35px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+article:hover, footer:hover {
+  cursor: pointer;
+  height: auto;
+  overflow: visible;
+}
+
+article:active, footer:active {
+  height: auto;
+  overflow: visible;
+}
+
+article:focus, footer:focus {
+  height: auto;
+  overflow: visible; 
 }
